--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ hockey, and more. Stream your favorite sports teams and events in HD, with no ca
 </div>
 </div>
 <video autoplay controls crossorigin playsinline>
-<source type="application/vnd.apple.mpegurl" src="https://manifest.googlevideo.com/api/manifest/hls_variant/expire/1720348789/ei/FRyKZrmIDa683LUPrMSY8A0/ip/172.69.94.59/id/2z9NHPNf838.1/source/yt_live_broadcast/requiressl/yes/xpc/EgVo2aDSNQ%3D%3D/tx/51214393/txs/51214391%2C51214392%2C51214393%2C51214394/hfr/1/playlist_duration/30/manifest_duration/30/maudio/1/spc/NO7bAbKFSd4QaQWZuO8XSeEvPjHzaqgo9de7azetUPunFGohKEwcvbOt-wtQiII/vprv/1/go/1/rqh/5/pacing/0/nvgoi/1/keepalive/yes/dover/11/itag/0/playlist_type/DVR/sparams/expire%2Cei%2Cip%2Cid%2Csource%2Crequiressl%2Cxpc%2Ctx%2Ctxs%2Chfr%2Cplaylist_duration%2Cmanifest_duration%2Cmaudio%2Cspc%2Cvprv%2Cgo%2Crqh%2Citag%2Cplaylist_type/sig/AJfQdSswRQIgJW1-d2YzXcd1VkwxLlUOJyELtanBa0B55TbPZtlZ9rgCIQChsSkEQVyN3rt3dkHcOat47IufPcV5tGXYM9lniZMnAA%3D%3D/file/index.m3u8 "> </video>
+<source type="application/vnd.apple.mpegurl" src="https://entezeetv.fun/bdcast/hls/index.m3u8?id=4ed08af5"> </video>
  </video>
 </body>
 <script>
