--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ hockey, and more. Stream your favorite sports teams and events in HD, with no ca
 </div>
 </div>
 <video autoplay controls crossorigin playsinline>
-<source type="application/vnd.apple.mpegurl" src="https://entezeetv.fun/bdcast/hls/index.m3u8?id=4ed08af5"> </video>
+<source type="application/vnd.apple.mpegurl" src="https://edge01.iptv.digijadoo.net/live/somoy_news/playlist.m3u8?md5=W3TyD6rvMb6cSvANt1BFPg&expires=1724203439&user=c28278b7cc41459ea95c1d05df91e3e7"> </video>
  </video>
 </body>
 <script>
