--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ hockey, and more. Stream your favorite sports teams and events in HD, with no ca
 </div>
 </div>
 <video autoplay controls crossorigin playsinline>
-<source type="application/vnd.apple.mpegurl" src="https://edge01.iptv.digijadoo.net/live/somoy_news/playlist.m3u8?md5=W3TyD6rvMb6cSvANt1BFPg&expires=1724203439&user=c28278b7cc41459ea95c1d05df91e3e7"> </video>
+<source type="application/vnd.apple.mpegurl" src="https://manifest.googlevideo.com/api/manifest/hls_variant/expire/1724192476/ei/fMLEZu-fGsKS4t4Pn_jxkQM/ip/194.233.76.245/id/aTzRun7M-fk.1/source/yt_live_broadcast/requiressl/yes/xpc/EgVo2aDSNQ%3D%3D/hfr/1/playlist_duration/30/manifest_duration/30/maudio/1/spc/Mv1m9uecK7c1KspAHuZ_XGrAcXpPRAncoQ2PV8VHn4tLQvKo4uhSmkck9ccCuco/vprv/1/go/1/rqh/5/pacing/0/nvgoi/1/keepalive/yes/dover/11/itag/0/playlist_type/DVR/sparams/expire%2Cei%2Cip%2Cid%2Csource%2Crequiressl%2Cxpc%2Chfr%2Cplaylist_duration%2Cmanifest_duration%2Cmaudio%2Cspc%2Cvprv%2Cgo%2Crqh%2Citag%2Cplaylist_type/sig/AJfQdSswRQIhAMRwL-vhNRR02YJcgjDVskWIuP1YMgH6pFkP_ZbRQlvVAiAIphlptsJkFm8yWxFBrt9OPdiNW2PIZtN-28HhrKGdgA%3D%3D/file/index.m3u8"> </video>
  </video>
 </body>
 <script>
