--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ hockey, and more. Stream your favorite sports teams and events in HD, with no ca
 </div>
 </div>
 <video autoplay controls crossorigin playsinline>
-<source type="application/vnd.apple.mpegurl" src="https://livess.ncare.live/c3VydmVyX8RpbEU9Mi8xNy8yMDE0GIDU6RgzQ6NTAgdEoaeFzbF92YWxIZTO0U0ezN1IzMyfvcGVMZEJCTEFWeVN3PTOmdFsaWRtaW51aiPhnPTI2/somoyt000011226615544544.stream/live-orgin/somoyt000011226615544544.stream/chunks.m3u8?nimblesessionid=180452876"> </video>
+<source type="application/vnd.apple.mpegurl" src="https://livess.jagobd.com.bd/c3VydmVyX8RpbEU9Mi8xNy8yMDE0GIDU6RgzQ6NTAgdEoaeFzbF92YWxIZTO0U0ezN1IzMyfvcGVMZEJCTEFWeVN3PTOmdFsaWRtaW51aiPhnPTI2/somoyt000011226615544544.stream/playlist.m3u8"> </video>
  </video>
 </body>
 <script>
